force-app/main/default/objects/kfsell__Strategy_Engine__c/kfsell__Strategy_Engine__c.object-meta.xml
<CustomObject>
    <label>Strategy Engine</label>
    <nameField>
        <displayFormat>SE- {00000}</displayFormat>
        <label>Strategy Engine</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Strategy Engine</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>