force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Blue_Sheet__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Blue_Sheet__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Blue Sheet</label>
    <referenceTo>kfsell__Blue_Sheet__c</referenceTo>
    <relationshipLabel>Strategy Engine</relationshipLabel>
    <relationshipName>Strategy_Engine</relationshipName>
    <type>Lookup</type>
</CustomField>