force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Buying_Influence__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Buying_Influence__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Buying Influence</label>
    <referenceTo>kfsell__Buying_Influence__c</referenceTo>
    <relationshipLabel>Strategy Engine</relationshipLabel>
    <relationshipName>Strategy_Engine</relationshipName>
    <type>Lookup</type>
</CustomField>