force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Competitive_Preference__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Competitive_Preference__c</fullName>
    <label>Competitive Preference</label>
    <length>80</length>
    <type>Text</type>
</CustomField>