force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Customer_Timing_for_Priorities__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Customer_Timing_for_Priorities__c</fullName>
    <label>Customer Timing for Priorities</label>
    <length>80</length>
    <type>Text</type>
</CustomField>