force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Opty_Close_Date__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Opty_Close_Date__c</fullName>
    <label>Opty Close Date</label>
    <type>Date</type>
</CustomField>