force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Position_is_Positive__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Position_is_Positive__c</fullName>
    <label>Position is Positive</label>
    <length>80</length>
    <type>Text</type>
</CustomField>