force-app/main/default/objects/kfsell__Strategy_Engine__c/fields/kfsell__Rating__c.field-meta.xml
<CustomField>
    <fullName>kfsell__Rating__c</fullName>
    <label>Rating</label>
    <length>80</length>
    <type>Text</type>
</CustomField>