force-app/main/default/objects/kfsell__Strategy_Engine__c/listViews/kfsell__All.listView-meta.xml
<ListView>
    <fullName>kfsell__All</fullName>
    <columns>NAME</columns>
    <columns>kfsell__Opportunity_Name__c</columns>
    <columns>kfsell__Blue_Sheet_Name__c</columns>
    <columns>kfsell__Object_API_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>kfsell__Is_Last__c</columns>
    <columns>kfsell__Opportunity_Amount__c</columns>
    <columns>kfsell__Account_Name__c</columns>
    <columns>kfsell__Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>