force-app/main/default/objects/kfsell__Strategy_Engine__c/listViews/kfsell__Copy_of_Api_equal_to_Contacts.listView-meta.xml
<ListView>
    <fullName>kfsell__Copy_of_Api_equal_to_Contacts</fullName>
    <columns>kfsell__Object_API_Name__c</columns>
    <columns>NAME</columns>
    <columns>kfsell__Opportunity_Name__c</columns>
    <columns>kfsell__Account_Name__c</columns>
    <columns>kfsell__Contact_Name__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>kfsell__Object_API_Name__c</field>
        <operation>contains</operation>
        <value>Contact</value>
    </filters>
    <label>Copy of Api equal to Contacts</label>
</ListView>